# lumyn

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  SPECS_SCHEMAS.md  coverage.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  embed-docs.yml  release.yml
benchmarks/: README.md
docs/: architecture.md  integration_checklist.md  migration_v0_to_v1.md  quickstart.md
docs-site/: package-lock.json
docs-site/public/: sitemap.xml
docs/blog/: ai-incident-response-replay.md  decision-logs-vs-telemetry.md  reason-codes-are-a-contract.md  what-is-a-decision-record.md
examples/: decision_record_example.json  policy_support.v0.yml
examples/curl/: decision_request_refund.json  decision_request_update_ticket.json
examples/python/: decide_approve_spend.py  decide_change_email.py
playground/: package-lock.json
policies/: lumyn-support.v0.yml  starter.v1.yml
schemas/: decision_request.v0.schema.json  policy.v0.schema.json  policy.v1.schema.json
scripts/: embed_docs.py
src/lumyn/: __init__.py  assets.py  (+1 more)
tests/: test_api_v0.py  test_cli_convert_v1.py  test_cli_diff.py  test_cli_epic5.py  test_cli_monitor.py  test_cli_policy_validate.py  test_cli_replay.py  test_config.py  test_failure_similarity_escalates.py  test_markdown_ticket_summary.py  test_obligations.py  test_policy_v1_golden.py  test_schemas_v0.py  test_storage_unavailable_abstains.py
(+67 files in other folders)
