[project]
name = "lumyn"
version = "0.1.0"
description = "Decision Records for production AI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Lumyn OSS Contributors" }]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0.2",
  "typer>=0.12",
  "ulid-py>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/davidahmann/lumyn"
Repository = "https://github.com/davidahmann/lumyn"

[project.scripts]
lumyn = "lumyn.cli.main:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "bandit>=1.7.9",
  "pip-audit>=2.7.3",
  "detect-secrets>=1.5.0",
  "mypy>=1.11",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "ruff>=0.6",
  "types-PyYAML>=6.0.12.20240808",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
